--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
       "type": "shell",
       "command": "g++",
       "args": [
-        "-g", "./Arrays/Pair_in_Array_whose_sum_is_k/main.cpp"
+        "-g", "./Arrays/Pair in Array whose sum is k/main.cpp"
       ],
       "group": {
         "kind": "build",
