--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
       "type": "shell",
       "command": "g++",
       "args": [
-        "-g", "./Arrays/Count pairs whose LCM is greater that min of pair of numbers/main.cpp"
+        "-g", "./Arrays/MaxSum SubArray/main.cpp"
       ],
       "group": {
         "kind": "build",
