--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
       "type": "shell",
       "command": "g++",
       "args": [
-        "-g", "./Companies/Goldmaan Sachs/Previously asked programs/OA 2019 - Find The Rank/main.cpp"
+        "-g", "./Companies/Goldmaan Sachs/Previously asked programs/Maximal Commanlity/main.cpp"
       ],
       "group": {
         "kind": "build",
